@@ -216,6 +216,7 @@ Chronological list of authors
   - Xiaoxu Ruan
   - Egor Marin
   - Shaivi Malik
+  - Daniel J. Evans
 
 External code
 -------------
